<resources>
    <string name="app_name">Weather App</string>
    <string name="city_hint">City (i.e. Charlotte)</string>
    <string name="country_hint">Country (i.e. US)</string>
    <string name="search">Search</string>
    <string name="no_favourites">There are no cities to display. Search the city from the search box and save.</string>
    <string name="city_weather">City Weather</string>
    <string name="loding_data_msg">Loading Hourly Data</string>
    <string name="city_name_error">City name is empty or incorrect</string>
    <string name="state_name_error">State name is empty or incorrect</string>
    <string name="hourly_data">Hourly Data</string>
    <string name="current_location">Current Location: </string>
    <string name="max_temp">Max Temperature:</string>
    <string name="min_temp">Min Temperature:</string>
    <string name="feels_like">Feels Like:</string>
    <string name="humidity">Humidity:</string>
    <string name="dew_point">Dew Point:</string>
    <string name="pressure">Pressure:</string>
    <string name="clouds">Clouds:</string>
    <string name="winds">Wind:</string>
    <string name="city_deleted">City Deleted</string>
    <string name="error_msg">Error: Not found city</string>
    <string name="favourite_added">City saved</string>
    <string name="save_city">Save City</string>
    <string name="favourite_updated">City updated</string>
    <string name="preference_changed_to_F">Temperature Unit has been changed to oC to oF</string>
    <string name="preference_changed_to_C">Temperature Unit has been changed to oF to oC</string>
    <string name="title_activity_hourly_details">HourlyDetails</string>
    <string name="favourites">Saved Cities</string>
    <string name="preferences">Preferences</string>
    <string name="tempUnit">Temperature Unit</string>
    <string name="tempDescr">Choose between Celcuis and Fahrenheit</string>
    <string name="forecastTitle">Daily Forecast for</string>
    <string name="threeHourlyTitle">Three-Hourly Forecast on</string>
    <string name="title_activity_preference">Settings</string>
    <string name="temperature">Temperature: </string>
    <string name="condition">Condition:</string>

    <string-array name="temp_unit_list">
        <item>O C</item>
        <item>O F</item>
    </string-array>

    <string-array name="temp_unit_values">
        <item>0</item>
        <item>1</item>
    </string-array>
</resources>