<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.tvs.weatherapp.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/city"
            android:hint="@string/city_hint"
            android:gravity="center_vertical|center_horizontal"
            android:textAlignment="viewStart" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:layout_below="@+id/city"
            android:layout_alignLeft="@+id/city"
            android:layout_alignStart="@+id/city"
            android:id="@+id/state"
            android:hint="@string/country_hint"
            android:gravity="center_vertical|center_horizontal"
            android:textAlignment="viewStart" />

        <Button
            android:text="@string/search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:id="@+id/submit"
            android:layout_below="@+id/state"
            android:layout_alignLeft="@+id/state"
            android:layout_alignStart="@+id/state"
            android:layout_alignRight="@+id/state"
            android:layout_alignEnd="@+id/state" />

        <TextView
            android:text="@string/favourites"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@android:color/black"
            android:textAlignment="center"
            android:layout_below="@+id/submit"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:id="@+id/favouritesLabel"
            android:visibility="invisible" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/no_favourites"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/submit"
                android:layout_marginTop="137dp"
                android:id="@+id/no_favourites_label"
                tools:text="@string/no_favourites"
                android:textColor="@android:color/black"
                android:gravity="center_vertical|center_horizontal"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/favouritesList" />

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>
